--- a/index.html
+++ b/index.html
@@ -4,30 +4,71 @@
   <head>
     <title>Rebeca Coli - DoWhile 2021</title>
 
-    <style>
-      html,
-      body {
-        height: 100%;
-      }
+    <link rel="stylesheet" href="style.css" />
 
-      body {
-        display: grid;
-        place-items: center;
-        background: rgb(211, 101, 255);
-      }
-
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      a {
-        color: black;
-        text-decoration: none;
-      }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Rebeca Coli</h1>
-    <a href="https://instagram.com/becacoli">@becacoli</a>
+    <main>
+      <div class="container">
+        <div class="avatar">
+          <span>
+            <img src="images/build.svg" alt="Selo Rocketseat" />
+          </span>
+          <img src="images/foto.jpg" alt="Foto pessoal" />
+        </div>
+        <h1>Rebeca Coli</h1>
+        <a href="https://github.com/becacoli">
+          <img src="images/github.svg" alt="ícone github" />
+          becacoli</a
+        >
+
+        <p>Apenas uma gostosa aprendendo a programar.</p>
+
+        <ul>
+          <li>
+            <a href="https://www.youtube.com/channel/UC-PX4KYBXSQEyU_9AOkTY6w">
+              <img
+                src="images/youtube.svg"
+                alt="ícone do youtube"
+                target="_blank"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://instagram.com/becacoli">
+              <img
+                src="images/instagram.svg"
+                alt="ícone do instagram"
+                target="_blank"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/becacoli/">
+              <img
+                src="images/facebook.svg"
+                alt="ícone do facebook"
+                target="_blank"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com/becacoli">
+              <img
+                src="images/twitter.svg"
+                alt="ícone do twitter"
+                target="_blank"
+              />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
